test_outputs/connlist/acs-security-demos-added-workloads_focus_workload_backend_recommendation_connlist_output.txt
backend/checkout[Deployment] => backend/recommendation[Deployment] : TCP 8080
backend/recommendation[Deployment] => backend/catalog[Deployment] : TCP 8080
backend/reports[Deployment] => backend/recommendation[Deployment] : TCP 8080
frontend/webapp[Deployment] => backend/recommendation[Deployment] : TCP 8080
